--- a/projects/mars.html
+++ b/projects/mars.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="../css/style.css">
     <script src="../js/translation.js"></script>
     <script src="../components/navbar.js"></script>
+    <script src="../components/developer.js"></script>
 
     <style>
         body {
@@ -145,6 +146,16 @@
             </span>
         </div> -->
 
+        <div class="w3-container w3-padding-16 ">
+            <h3 id="devs-header" class=" w3-border-bottom w3-border-light-grey">
+                Developers
+            </h3>
+        </div>
+
+        <div class="w3-row-padding">
+            <vrtools-dev dev="paulo" main class="w3-col l2 m6 w3-margin-bottom"></vrtools-dev>
+        </div>
+
         <div class="w3-panel w3-leftbar w3-serif">
             <h5 id="refer"><b>Reference:</b></h5>
             <!-- <p>
@@ -277,6 +288,11 @@
             'Referências'
         );
 
+        TRANSLATION.add(
+            '#devs-header',
+            'Developers',
+            'Desenvolvedores'
+        )
     </script>
 </body>
 
