--- a/projects/architecture.html
+++ b/projects/architecture.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="../css/style.css">
     <script src="../js/translation.js"></script>
     <script src="../components/navbar.js"></script>
+    <script src="../components/developer.js"></script>
 </head>
 
 <body>
@@ -73,7 +74,7 @@
 
                 <a href="javascript: TRANSLATION.redirect('projects/src/architecture-application.html', '', true);">
                     <div class="more-modes w3-display-container"
-                         style="background: url('img/Architecture/blur.jpg') center;">
+                        style="background: url('img/Architecture/blur.jpg') center;">
                         <div class="w3-padding" style="width:100%">
                             <img src="img/icons/fullscreen-icon.png" alt="fullscreen" style="width: 64px;" />
                             <br />
@@ -86,7 +87,7 @@
             <div class="w3-col l3 m6 w3-margin-bottom w3-margin-top">
                 <a href="javascript: TRANSLATION.redirect('projects/src/architecture-AR.html', '', true);">
                     <div class="more-modes w3-display-container"
-                         style="background: url('img/Architecture/blur-AR.jpg') center;">
+                        style="background: url('img/Architecture/blur-AR.jpg') center;">
                         <div class="w3-padding" style="width:100%">
                             <img src="img/icons/ar-icon.png" alt="Augmented Reality" style="width: 64px;" />
                             <br />
@@ -97,18 +98,18 @@
 
                 <p class="more-modes-text">
                     <img src="img/icons/alert.png" alt="alert" style="height: 32px;">
-                    <div id="warning-fiducial">
-                        You must print a fiducial marker to use Augmented Reality mode (<a href="data/markers/hiro.png"
-                                                                                           target="_blank">click here</a> to
-                        download).
-                    </div>
+                <div id="warning-fiducial">
+                    You must print a fiducial marker to use Augmented Reality mode (<a href="data/markers/hiro.png"
+                        target="_blank">click here</a> to
+                    download).
+                </div>
                 </p>
             </div>
 
             <div class="w3-col l3 m6 w3-margin-bottom w3-margin-top">
                 <a href="javascript: TRANSLATION.redirect('projects/src/architecture-application-VR.html', '', true);">
                     <div class="more-modes w3-display-container"
-                         style="background: url('img/Architecture/blur-VR.jpg') center;">
+                        style="background: url('img/Architecture/blur-VR.jpg') center;">
                         <div class="w3-padding" style="width:100%">
                             <img src="img/icons/vr-icon.png" alt="Augmented Reality" style="width: 64px;" />
                             <br />
@@ -119,18 +120,19 @@
 
                 <p class="more-modes-text">
                     <img src="img/icons/alert.png" alt="alert" style="height: 32px;">
-                    <div id="warning-hmd-1">
-                        In order to fully experiece the VR mode, it is required one HMD (head-mounted display).
-                    </div>
+                <div id="warning-hmd-1">
+                    In order to fully experiece the VR mode, it is required one HMD (head-mounted display).
+                </div>
                 </p>
 
                 <p class="more-modes-text">
                     <img src="img/icons/alert.png" alt="alert" style="height: 32px;">
-                    <div id="warning-vr">
-                        It may be necessary to accept the installation of <a href="https://play.google.com/store/apps/details?id=com.google.vr.vrcore&hl=en_US&gl=US"
-                                                                             target="_blank">Google Virtual Reality services</a>
-                        on the first access.
-                    </div>
+                <div id="warning-vr">
+                    It may be necessary to accept the installation of <a
+                        href="https://play.google.com/store/apps/details?id=com.google.vr.vrcore&hl=en_US&gl=US"
+                        target="_blank">Google Virtual Reality services</a>
+                    on the first access.
+                </div>
                 </p>
 
             </div>
@@ -175,6 +177,16 @@
         </div>
 
         <!-- End page content -->
+
+        <div class="w3-container w3-padding-16 ">
+            <h3 id="devs-header" class=" w3-border-bottom w3-border-light-grey">
+                Developers
+            </h3>
+        </div>
+
+        <div class="w3-row-padding">
+            <vrtools-dev dev="paulo" main class="w3-col l2 m6 w3-margin-bottom"></vrtools-dev>
+        </div>
     </div>
 
     <footer class="w3-center w3-black w3-padding-16 ">
@@ -202,7 +214,7 @@
         TRANSLATION.onTranslate = function () {
             // document.querySelector('#scene').src = 'src/architecture-application.html?lang=' + TRANSLATION.currentLang;
             document.querySelector('#scene').contentWindow.changeLanguage(TRANSLATION.currentLang);
-         
+
         }
 
         TRANSLATION.add(
@@ -309,6 +321,12 @@
             'Architecture',
             'Arquitetura'
         );
+
+        TRANSLATION.add(
+            '#devs-header',
+            'Developers',
+            'Desenvolvedores'
+        )
 
         // TRANSLATION.add(
         //     '#bottom',
