--- a/projects/historical-figures.html
+++ b/projects/historical-figures.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="../css/style.css">
     <script src="../js/translation.js"></script>
     <script src="../components/navbar.js"></script>
+    <script src="../components/developer.js"></script>
 </head>
 
 <body>
@@ -110,37 +111,15 @@
             </h3>
         </div>
 
-        <!--
-        <div class="w3-content w3-display-container w3-center w3-row ">
-
-            <img class="slide " src="./img/Architecture/screenshot1-AR.jpg" onclick="openModal(1)">
-            <img class="slide " src="./img/Architecture/screenshot2-AR.jpg" onclick="openModal(2)">
-            <img class="slide " src="./img/Architecture/example-VR.jpg" onclick="openModal(3)">
-
-            <button id="btn-left " class="w3-button w3-black w3-display-left w3-hide-large " onclick="plusDivs(-1) ">
-                &#10094;
-            </button>
-            <button class="w3-button w3-black w3-display-right w3-hide-large " onclick="plusDivs(1) ">&#10095;</button>
-        </div>
-
-        <div id="modal-slideshow" class="w3-modal w3-black">
-            <div class="w3-content w3-center" style="height: 80%;">
-                <img class="slide-modal w3-display-middle" src="./img/Architecture/screenshot1-AR.jpg"
-                    style="height: 100%;">
-                <img class="slide-modal w3-display-middle" src="./img/Architecture/screenshot2-AR.jpg"
-                    style="height: 100%;">
-                <img class="slide-modal w3-display-middle" src="./img/Architecture/example-VR.jpg"
-                    style="height: 100%;">
-
-                <span class="w3-black w3-text-white w3-opacity w3-display-left w3-btn" onclick="plusModal(-1)">❮</span>
-                <span class="w3-black w3-text-white w3-opacity w3-display-right w3-btn" onclick="plusModal(1)">❯</span>
-            </div>
-
-            <span
-                class="w3-black w3-text-white w3-opacity w3-xxlarge w3-hover-text-grey w3-container w3-display-topright"
-                onclick="closeModal()" style="cursor:pointer">×</span>
-        </div>
-        -->
+    <div class="w3-container w3-padding-16 ">
+        <h3 id="devs-header" class=" w3-border-bottom w3-border-light-grey">
+            Developers
+        </h3>
+    </div>
+    
+    <div class="w3-row-padding">
+        <vrtools-dev dev="lucas" main class="w3-col l2 m6 w3-margin-bottom"></vrtools-dev>
+    </div>
 
     <div class="w3-panel w3-leftbar w3-serif">
         <h5><b>Reference:</b></h5>
@@ -157,6 +136,7 @@
             "Napoleão Bonaparte". Disponível em:〈 <a href="https://commons.wikimedia.org/wiki/File:Napoleon_cropFXD.jpg">https://commons.wikimedia.org/wiki/File:Napoleon_cropFXD.jpg</a> 〉<br>
             "Winston Churchill". Disponível em:〈 <a href="https://commons.wikimedia.org/wiki/File:Sir_Winston_Churchill_-_19086236948.jpg">https://commons.wikimedia.org/wiki/File:Sir_Winston_Churchill_-_19086236948.jpg</a> 〉<br>
         </i></p>
+    </div>
     </div>
 
     <!-- End page content -->
@@ -285,6 +265,12 @@
             'Historical Figures',
             'Figuras Históricas'
         );
+
+        TRANSLATION.add(
+            '#devs-header',
+            'Developers',
+            'Desenvolvedores'
+        )
     </script>
 </body>
 
