--- a/projects/projectile-motion.html
+++ b/projects/projectile-motion.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="../css/style.css">
     <script src="../js/translation.js"></script>
     <script src="../components/navbar.js"></script>
+    <script src="../components/developer.js"></script>
 </head>
 
 <body>
@@ -168,17 +169,7 @@
                 </div>
                 </p>
             </div>
-
         </div>
-
-        <div class="w3-panel w3-leftbar w3-serif">
-            <h5><b id="refer">Reference:</b></h5>
-            <p>
-                <i> "What is 2D projectile motion?" From Khan Academy. Web Resource
-                    https://www.khanacademy.org/science/physics/two-dimensional-motion/two-dimensional-projectile-mot/a/what-is-2d-projectile-motion</i>
-            </p>
-        </div>
-        <!-- End of more modes -->
 
         <div class="w3-container w3-padding-32 ">
             <h3 class="w3-padding-16 w3-border-bottom w3-border-light-grey ">
@@ -219,6 +210,26 @@
                 onclick="closeModal()" style="cursor:pointer">×
             </span>
         </div>
+
+        <div class="w3-container w3-padding-16 ">
+            <h3 id="devs-header" class=" w3-border-bottom w3-border-light-grey">
+                Developers
+            </h3>
+        </div>
+
+        <div class="w3-row-padding">
+            <vrtools-dev dev="paulo" main class="w3-col l2 m6 w3-margin-bottom"></vrtools-dev>
+            <vrtools-dev dev="andre" class="w3-col l2 m6 w3-margin-bottom"></vrtools-dev>
+        </div>
+
+        <div class="w3-panel w3-leftbar w3-serif">
+            <h5><b id="refer">Reference:</b></h5>
+            <p>
+                <i> "What is 2D projectile motion?" From Khan Academy. Web Resource
+                    https://www.khanacademy.org/science/physics/two-dimensional-motion/two-dimensional-projectile-mot/a/what-is-2d-projectile-motion</i>
+            </p>
+        </div>
+        <!-- End of more modes -->
 
         <!-- End page content -->
     </div>
@@ -338,6 +349,12 @@
             'Reference',
             'Referências'
         );
+
+        TRANSLATION.add(
+            '#devs-header',
+            'Developers',
+            'Desenvolvedores'
+        )
     </script>
 </body>
 
