--- a/projects/vascular-diseases.html
+++ b/projects/vascular-diseases.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="../css/style.css">
     <script src="../js/translation.js"></script>
     <script src="../components/navbar.js"></script>
+    <script src="../components/developer.js"></script>
 </head>
 
 <body>
@@ -143,6 +144,17 @@
             </span>
         </div>
 
+        <div class="w3-container w3-padding-16 ">
+            <h3 id="devs-header" class=" w3-border-bottom w3-border-light-grey">
+                Developers
+            </h3>
+        </div>
+
+        <div class="w3-row-padding">
+            <vrtools-dev dev="paulo" main class="w3-col l2 m6 w3-margin-bottom"></vrtools-dev>
+            <vrtools-dev dev="andre" class="w3-col l2 m6 w3-margin-bottom"></vrtools-dev>
+        </div>
+
         <!-- End page content -->
     </div>
 
@@ -214,6 +226,11 @@
                         no primeiro acesso. `
         );
 
+        TRANSLATION.add(
+            '#devs-header',
+            'Developers',
+            'Desenvolvedores'
+        );
     </script>
 </body>
 
